change color back icon

--- a/styles.scss
+++ b/styles.scss
@@ -768,7 +768,7 @@ button#orderForm\:gcontshop {
     width: 40px;
     height: 40px;
     border-radius: 50% !important;
-    background-color: var(--secondary-light-grey-color) !important;
+    background-color: #dcdbdb !important;
     padding: 1rem 0 1rem 1rem !important;
     
     .fa-arrow-left{
